// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Highlight parses an highlighted property of hit object 1`] = `
<span
  className="cvi-Highlight"
>
  <span
    className="cvi-Highlight-nonHighlighted"
  >
    awesome 
  </span>
  <em
    className="cvi-Highlight-highlighted"
  >
    hi
  </em>
  <span
    className="cvi-Highlight-nonHighlighted"
  >
    ghlighted 
  </span>
  <em
    className="cvi-Highlight-highlighted"
  >
    hi
  </em>
  <span
    className="cvi-Highlight-nonHighlighted"
  >
    t!
  </span>
</span>
`;

exports[`Highlight renders a hit with a custom className 1`] = `
<span
  className="cvi-Highlight MyCustomHighlight"
>
  <span
    className="cvi-Highlight-nonHighlighted"
  >
    awesome 
  </span>
  <em
    className="cvi-Highlight-highlighted"
  >
    hi
  </em>
  <span
    className="cvi-Highlight-nonHighlighted"
  >
    ghlighted 
  </span>
  <em
    className="cvi-Highlight-highlighted"
  >
    hi
  </em>
  <span
    className="cvi-Highlight-nonHighlighted"
  >
    t!
  </span>
</span>
`;

exports[`Highlight renders a hit with a custom tag correctly 1`] = `
<span
  className="cvi-Highlight"
>
  <span
    className="cvi-Highlight-nonHighlighted"
  >
    awesome 
  </span>
  <marquee
    className="cvi-Highlight-highlighted"
  >
    hi
  </marquee>
  <span
    className="cvi-Highlight-nonHighlighted"
  >
    ghlighted 
  </span>
  <marquee
    className="cvi-Highlight-highlighted"
  >
    hi
  </marquee>
  <span
    className="cvi-Highlight-nonHighlighted"
  >
    t!
  </span>
</span>
`;
